--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="ANEW_SEND">Resend</string>
     <string name="AT_HOME">At home</string>
     <string name="AUDIBLE_ALERT">Choose the Audio alert to be played when motion is detected</string>
-    <string name="Add_Device_ENTER_SN">Please enter the S/N or CID code</string>
-    <string name="Add_Device_SN">Input S/N code</string>
+    <string name="Add_Device_ENTER_SN">Please enter the (S/N)CID</string>
+    <string name="Add_Device_SN">Input (S/N)CID</string>
     <string name="Add_Device_Scan_QR">Scan QR code</string>
     <string name="Added_successfully">Bind successfully</string>
     <string name="Alarm_WeChat">Alarm via WeChat</string>
@@ -126,14 +126,14 @@
     <string name="DIRECTION_NORMAL">Defualt</string>
     <string name="DOG_CAMERA_NAME">Camera</string>
     <string name="DOG_MAGNETISM_NAME">Magnetometer</string>
-    <string name="DOORBELL_BLUE_BLINKING">Light\'s blue steady</string>
     <string name="DOOR_ANSWERING">Connecting&#8230;</string>
     <string name="DOOR_BELL">My doorbell</string>
     <string name="DOOR_BELL_LOOK">View</string>
     <string name="DOOR_BETTERYMESG">Suggest using 5V/ 1A charger, \nState light is solid green while charging and it will be off when charge done.</string>
     <string name="DOOR_BIND">Added successfully</string>
     <string name="DOOR_BLINKING">Light\'s red steady</string>
-    <string name="DOOR_BLUE_BLINKING">Status indicator light should be red constantly, if not, pls restart device,then hold wifi button 3 seconds and wait the light turn red.</string>
+    <string name="DOOR_BLUE_BLINKING">Light\'s blue steady</string>
+    <string name="DOOR_BLUE_BLINKING_EX">Status indicator light should be red constantly, if not, pls restart device,then hold wifi button 3 seconds and wait the light turn red.</string>
     <string name="DOOR_CALL">Answered</string>
     <string name="DOOR_CALL_RECORD">No call Log</string>
     <string name="DOOR_CAMERA">Photograph</string>
@@ -211,7 +211,7 @@
     <string name="EQUIPMENT_INFO">Device info</string>
     <string name="EQUIPMENT_NAME">Device Name</string>
     <string name="EQUIPMENT_NAME_1">Device Name:</string>
-    <string name="ERROR_SN">Error S/N</string>
+    <string name="ERROR_SN">Error (S/N)CID</string>
     <string name="ERR_CODE">Error code</string>
     <string name="EVERY_DAY">Everyday</string>
     <string name="EXPECT">Coming soon, please expect.</string>
@@ -581,7 +581,7 @@
     <string name="ShareTo">Share to %s</string>
     <string name="SharedTo">Share to</string>
     <string name="Sharing_Management">Sharing Management</string>
-    <string name="Sliding_Timeline">Loading successful, sliding the timeline to view history video</string>
+    <string name="Sliding_Timeline">Sliding the timeline to view history video</string>
     <string name="Slogan">Homesick, Use Clever Dog</string>
     <string name="Slogan_Zhongxing">Smart Home, for better life</string>
     <string name="Smart_Door_Viewer">Smart Door Viewer</string>
@@ -1056,7 +1056,4 @@
     <string name="web">http://www.cleverdog.com.cn/</string>
     <string name="wifi_authentication">Verify %s WiFi connection</string>
     <string name="wifi_hasnot">Not find this WIFI</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
